# PipeSightConsole

./: .gitignore  CMakeLists.txt  ui.txt  ui_modify.md
android/: AndroidManifest.xml
build-codex/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-codex/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  appPipeSightConsole_qml.cmake  appPipeSightConsole_res.cmake
build-codex/.qt/deploy_qml_imports/: appPipeSightConsole.cmake
build-codex/.qt/qml_imports/: appPipeSightConsole_build.rsp  appPipeSightConsole_conf.cmake  appPipeSightConsole_conf.rsp
build-codex/.qt/rcc/: appPipeSightConsole_raw_qml_0.qrc  qmake_PipeSightConsole.qrc
build-codex/.rcc/qmlcache/: all_aotstats.aotstatslist  appPipeSightConsole_qml_loader_file_list.rsp  module_appPipeSightConsole.aotstatslist
build-codex/.rcc/qmllint/: appPipeSightConsole.rsp  appPipeSightConsole_json.rsp  appPipeSightConsole_module.rsp
build-codex/PipeSightConsole/: ConfigPanel.qml  ConnectionIndicator.qml  LaserPanel.qml  Main.qml  VehicleControlPanel.qml  VehicleInfoPanel.qml  VideoView.qml  appPipeSightConsole_qml_module_dir_map.qrc  qmldir
build-codex/qmltypes/: appPipeSightConsole_foreign_types.txt
docs/: ARCHITECTURE.md
downloads/AndroidSDK/: Android LCOpenMedia开发指南.docx  Android OpenSDK开发指南.docx  Android-V3.12.12-更新文档.docx  LCOpenMediaSDK.aar
downloads/WEB/: README.md  imou-player.js  index.html  index.js
downloads/WEB/demos/node-demo/: README-EN【Please read before use】.md  README【使用前必读】.md  index.js  package.json
downloads/WEB/demos/vue2-demo/: README-EN【Please read before use】.md  README【使用前必读】.md  package.json  vue.config.js
downloads/WEB/demos/vue2-demo/src/: App.vue
downloads/WEB/demos/vue3-demo/: README-EN【Please read before use】.md  README【使用前必读】.md  index.html  package.json  vite.config.ts
downloads/WEB/demos/vue3-mobile-demo/: README-EN【Please read before use】.md  README【使用前必读】.md  index.html  package-lock.json  package.json  vite.config.ts
lecheng/Media1/: Get_Audio_Encoder_Configurations.xml  Get_Audio_Outputs.xml  Get_Audio_Source_Configurations.xml  Get_Audio_Sources.xml  Get_Metadata_Configurations.xml  Get_OSDs.xml  Get_Profiles.xml  Get_Service_Capabilities.xml  Get_Snapshot_Uri.xml  Get_Stream_Uri.xml  Get_Video_Analytics_Configurations.xml  Get_Video_Encoder_Configurations.xml  Get_Video_Source_Configurations.xml  Get_Video_Sources.xml
lecheng/Media2/: Get_Analytics_Configurations.xml  Get_Audio_Decoder_Configurations.xml  Get_Audio_Encoder_Configurations.xml  Get_Audio_Output_Configurations.xml  Get_Audio_Source_Configurations.xml  Get_Metadata_Configurations.xml  Get_OSD_Options.xml  Get_OSDs.xml  Get_Profiles.xml  Get_Service_Capabilities.xml  Get_Snapshot_Uri.xml  Get_Stream_Uri_RTSP.xml  Get_Video_Encoder_Configuration_Options.xml  Get_Video_Encoder_Configurations.xml  Get_Video_Source_Configuration_Options.xml  Get_Video_Source_Configurations.xml
qml/: Main.qml
qml/components/: AppConfirmDialog.qml  AppNotifier.qml  AppSnackbar.qml  CameraConfigRow.qml  ConnectionIndicator.qml  Joystick.qml  VideoView.qml
qml/panels/: AdvancedPanel.qml  CameraPanel.qml  ConfigPanel.qml  DepthCameraPanel.qml  LaserPanel.qml  OsdPanel.qml  VehicleControlPanel.qml  VehicleInfoPanel.qml
src/app/: main.cpp
src/comm/: connection_manager.cpp  connection_manager.h  protocol_codec.cpp  protocol_codec.h  tcp_client.cpp  tcp_client.h
src/data/: app_settings.cpp  app_settings.h  database.cpp  database.h
src/services/: camera_service.cpp  camera_service.h  depth_camera_service.cpp  depth_camera_service.h  laser_service.cpp  laser_service.h  osd_renderer.cpp  osd_renderer.h  osd_service.cpp  osd_service.h  recording_service.cpp  recording_service.h  report_service.cpp  report_service.h  vehicle_service.cpp  vehicle_service.h
src/viewmodels/: advanced_viewmodel.cpp  advanced_viewmodel.h  camera_viewmodel.cpp  camera_viewmodel.h  config_viewmodel.cpp  config_viewmodel.h  depth_camera_viewmodel.cpp  depth_camera_viewmodel.h  laser_viewmodel.cpp  laser_viewmodel.h  native_notifier.cpp  native_notifier.h  osd_viewmodel.cpp  osd_viewmodel.h  vehicle_viewmodel.cpp  vehicle_viewmodel.h
tests/: auto.py
(+20 files in other folders)
